# matrixinator

./: .gitignore  README.md
libs/: utils.cpp
matrixinator/: CMakeLists.txt
matrixinator/hdr/: mtx.hpp  utils.hpp
matrixinator/headers/: mtx.hpp
matrixinator/src/: matrixinator.cpp  mtx.cpp  utils.cpp
